<resources>
    <string name="app_name">Pack</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_finish">Finish</string>
    <string name="attribute_name">Name</string>
    <string name="attribute_quantity">Quantity</string>
    <string name="attribute_weight">Weight</string>
    <string name="attribute_weight_total">Total Weight</string>
    <string name="attribute_description">Description</string>
    <string name="title_activity_some">SomeActivity</string>
    <string name="new_item">New Item</string>
    <string name="item_name">Item Name</string>
    <string name="unit_abbr">lbs</string>
    <string name="sort_dialog_title">Select Sort Parameters</string>
    <string name="sort_positive">Sort Items</string>
    <string name="cancel">Cancel</string>

    <string-array name="item_sort_options">
        <item>Type</item>
        <item>Type-Reverse</item>
        <item>Name</item>
        <item>Name-Reverse)</item>
        <item>Lightest</item>
        <item>Heaviest</item>
        <item>Newest</item>
        <item>Oldest</item>

    </string-array>

</resources>
