<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.none.pack.activities.EditCreateItem">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Type"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/type_select_spinner">

    </Spinner>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/item_name"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLength="50"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:id="@+id/ItemName"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attribute_quantity"
            android:gravity="center" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:gravity="center"
            android:text="1"
            android:id="@+id/ItemQuantity"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/attribute_weight"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:gravity="right"
                android:text="0"
                android:id="@+id/ItemPounds"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="."
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_weight="2"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:text="00"
                android:maxLength="2"
                android:id="@+id/ItemDecimal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_abbr"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/attribute_description"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:id="@+id/ItemDescription"
            />

</LinearLayout>
